--- a/trunk/Makefile.in
+++ b/trunk/Makefile.in
@@ -134,6 +134,8 @@ CASADI_HOME = $(abs_top_srcdir)/ThirdParty/CasADi/CasADi
 CC = @CC@
 CCDEPMODE = @CCDEPMODE@
 CFLAGS = @CFLAGS@
+CMAKE_PYTHON64_INCLUDE = @CMAKE_PYTHON64_INCLUDE@
+CMAKE_PYTHON64_LIB = @CMAKE_PYTHON64_LIB@
 CMAKE_PYTHON_INCLUDE = @CMAKE_PYTHON_INCLUDE@
 CMAKE_PYTHON_LIB = @CMAKE_PYTHON_LIB@
 CP = @CP@
@@ -186,6 +188,8 @@ NMEDIT = @NMEDIT@
 OBJDUMP = @OBJDUMP@
 OBJEXT = @OBJEXT@
 OPENMP_CFLAGS = @OPENMP_CFLAGS@
+ORIG_PATH = @ORIG_PATH@
+ORIG_PYTHON_HOME = @ORIG_PYTHON_HOME@
 OTOOL = @OTOOL@
 OTOOL64 = @OTOOL64@
 PACKAGE = @PACKAGE@
@@ -196,6 +200,7 @@ PACKAGE_TARNAME = @PACKAGE_TARNAME@
 PACKAGE_URL = @PACKAGE_URL@
 PACKAGE_VERSION = @PACKAGE_VERSION@
 PATH_SEPARATOR = @PATH_SEPARATOR@
+PYTHON64_HOME = @PYTHON64_HOME@
 PYTHON_HOME = @PYTHON_HOME@
 RANLIB = @RANLIB@
 REQUIRE_BEAVER_PATH = @REQUIRE_BEAVER_PATH@
@@ -283,10 +288,18 @@ assimulo_install_dir = $(abs_builddir)/Assimulo_install
 pymodelica_install_dir = $(abs_builddir)/pymodelica_install
 pyfmi_install_dir = $(abs_builddir)/PyFMI_install
 pyjmi_install_dir = $(abs_builddir)/PyJMI_install
+assimulo_install_dir64 = $(abs_builddir)/Assimulo_install64
+pymodelica_install_dir64 = $(abs_builddir)/pymodelica_install64
+pyfmi_install_dir64 = $(abs_builddir)/PyFMI_install64
+pyjmi_install_dir64 = $(abs_builddir)/PyJMI_install64
 assimulo_build_dir = $(abs_builddir)/Assimulo_build
 pymodelica_build_dir = $(abs_builddir)/pymodelica_build
 pyfmi_build_dir = $(abs_builddir)/PyFMI_build
 pyjmi_build_dir = $(abs_builddir)/PyJMI_build
+assimulo_build_dir64 = $(abs_builddir)/Assimulo_build64
+pymodelica_build_dir64 = $(abs_builddir)/pymodelica_build64
+pyfmi_build_dir64 = $(abs_builddir)/PyFMI_build64
+pyjmi_build_dir64 = $(abs_builddir)/PyJMI_build64
 bindistdir = JModelica.org-$(VERSION)-bin
 MC_INTERFACE = $(abs_top_srcdir)/ModelicaCasADiInterface
 MC_SRC = $(JAVA_CASADI_BASE_DIR)/ModelicaCompilerCasADi
@@ -933,6 +946,15 @@ build-python-packages:
 @WITH_OPENMP_TRUE@@WITH_SUNDIALS_TRUE@	*) \
 @WITH_OPENMP_TRUE@@WITH_SUNDIALS_TRUE@	python setup.py install --with_openmp=True --superlu-home=$(abs_builddir)/superlu_build/ --sundials-home=$(SUNDIALS_HOME) --sundials-with-superlu=True --blas-home=$(abs_builddir)/blas_install/ --lapack-home=$(abs_builddir)/lapack_install/ --prefix=$(assimulo_install_dir) ;; \
 @WITH_OPENMP_TRUE@@WITH_SUNDIALS_TRUE@	esac
+@JM_WIN64_TRUE@@WITH_OPENMP_TRUE@@WITH_PYTHON64_TRUE@@WITH_SUNDIALS_TRUE@	mkdir -p $(assimulo_build_dir64); \
+@JM_WIN64_TRUE@@WITH_OPENMP_TRUE@@WITH_PYTHON64_TRUE@@WITH_SUNDIALS_TRUE@	cd $(abs_top_srcdir)/external; \
+@JM_WIN64_TRUE@@WITH_OPENMP_TRUE@@WITH_PYTHON64_TRUE@@WITH_SUNDIALS_TRUE@	find Assimulo -type f |grep -v /.svn | grep -v .pyc | grep -v ~ |tar c -T - -f - | tar x -C $(assimulo_build_dir64); \
+@JM_WIN64_TRUE@@WITH_OPENMP_TRUE@@WITH_PYTHON64_TRUE@@WITH_SUNDIALS_TRUE@	cd $(assimulo_build_dir)/Assimulo; \
+@JM_WIN64_TRUE@@WITH_OPENMP_TRUE@@WITH_PYTHON64_TRUE@@WITH_SUNDIALS_TRUE@	export PATH=$(PYTHON64_HOME):$(PYTHON64_HOME)/Scripts:"${PATH}"; \
+@JM_WIN64_TRUE@@WITH_OPENMP_TRUE@@WITH_PYTHON64_TRUE@@WITH_SUNDIALS_TRUE@	export PYTHON_HOME=$(PYTHON64_HOME); \
+@JM_WIN64_TRUE@@WITH_OPENMP_TRUE@@WITH_PYTHON64_TRUE@@WITH_SUNDIALS_TRUE@	python setup.py install --with_openmp=True --superlu-home=$(abs_builddir)/superlu_build64/ --sundials-home=$(SUNDIALS_HOME)64 --sundials-with-superlu=True --blas-home=$(abs_builddir)/blas_install64/ --lapack-home=$(abs_builddir)/lapack_install64/ --force-32bit="false" $(NUMPY_NO_MSVCR_ARG) --prefix=$(assimulo_install_dir64); \
+@JM_WIN64_TRUE@@WITH_OPENMP_TRUE@@WITH_PYTHON64_TRUE@@WITH_SUNDIALS_TRUE@	export PATH="$(ORIG_PATH)"; \
+@JM_WIN64_TRUE@@WITH_OPENMP_TRUE@@WITH_PYTHON64_TRUE@@WITH_SUNDIALS_TRUE@	export PYTHON_HOME=$(ORIG_PYTHON_HOME)
 @WITH_OPENMP_FALSE@@WITH_SUNDIALS_TRUE@	mkdir -p $(assimulo_build_dir); \
 @WITH_OPENMP_FALSE@@WITH_SUNDIALS_TRUE@	cd $(abs_top_srcdir)/external; \
 @WITH_OPENMP_FALSE@@WITH_SUNDIALS_TRUE@	find Assimulo -type f |grep -v /.svn | grep -v .pyc | grep -v ~ |tar c -T - -f - | tar x -C $(assimulo_build_dir); \
@@ -945,10 +967,25 @@ build-python-packages:
 @WITH_OPENMP_FALSE@@WITH_SUNDIALS_TRUE@	*) \
 @WITH_OPENMP_FALSE@@WITH_SUNDIALS_TRUE@	python setup.py install --sundials-home=$(SUNDIALS_HOME) --blas-home=$(abs_builddir)/blas_install/ --lapack-home=$(abs_builddir)/lapack_install/ --prefix=$(assimulo_install_dir) ;; \
 @WITH_OPENMP_FALSE@@WITH_SUNDIALS_TRUE@	esac
+@JM_WIN64_TRUE@@WITH_OPENMP_FALSE@@WITH_PYTHON64_TRUE@@WITH_SUNDIALS_TRUE@	mkdir -p $(assimulo_build_dir64); \
+@JM_WIN64_TRUE@@WITH_OPENMP_FALSE@@WITH_PYTHON64_TRUE@@WITH_SUNDIALS_TRUE@	cd $(abs_top_srcdir)/external; \
+@JM_WIN64_TRUE@@WITH_OPENMP_FALSE@@WITH_PYTHON64_TRUE@@WITH_SUNDIALS_TRUE@	find Assimulo -type f |grep -v /.svn | grep -v .pyc | grep -v ~ |tar c -T - -f - | tar x -C $(assimulo_build_dir64); \
+@JM_WIN64_TRUE@@WITH_OPENMP_FALSE@@WITH_PYTHON64_TRUE@@WITH_SUNDIALS_TRUE@	cd $(assimulo_build_dir64)/Assimulo; \
+@JM_WIN64_TRUE@@WITH_OPENMP_FALSE@@WITH_PYTHON64_TRUE@@WITH_SUNDIALS_TRUE@	export PATH=$(PYTHON64_HOME):$(PYTHON64_HOME)/Scripts:"${PATH}"; \
+@JM_WIN64_TRUE@@WITH_OPENMP_FALSE@@WITH_PYTHON64_TRUE@@WITH_SUNDIALS_TRUE@	export PYTHON_HOME=$(PYTHON64_HOME); \
+@JM_WIN64_TRUE@@WITH_OPENMP_FALSE@@WITH_PYTHON64_TRUE@@WITH_SUNDIALS_TRUE@	python setup.py install --sundials-home=$(SUNDIALS_HOME)64 --blas-home=$(abs_builddir)/blas_install64/ --lapack-home=$(abs_builddir)/lapack_install64/ --force-32bit="false" $(NUMPY_NO_MSVCR_ARG) --prefix=$(assimulo_install_dir64) ; \
+@JM_WIN64_TRUE@@WITH_OPENMP_FALSE@@WITH_PYTHON64_TRUE@@WITH_SUNDIALS_TRUE@	export PATH="$(ORIG_PATH)"; \
+@JM_WIN64_TRUE@@WITH_OPENMP_FALSE@@WITH_PYTHON64_TRUE@@WITH_SUNDIALS_TRUE@	export PYTHON_HOME=$(ORIG_PYTHON_HOME)
 	cd $(abs_top_srcdir)/Python/src; \
 	python setup_pymodelica.py install --prefix=$(pymodelica_install_dir); \
 	rm -rf build
-
+@JM_WIN64_TRUE@@WITH_PYTHON64_TRUE@	cd $(abs_top_srcdir)/Python/src; \
+@JM_WIN64_TRUE@@WITH_PYTHON64_TRUE@	export PATH=$(PYTHON64_HOME):$(PYTHON64_HOME)/Scripts:"${PATH}"; \
+@JM_WIN64_TRUE@@WITH_PYTHON64_TRUE@	export PYTHON_HOME=$(PYTHON64_HOME); \
+@JM_WIN64_TRUE@@WITH_PYTHON64_TRUE@	python setup_pymodelica.py install --prefix=$(pymodelica_install_dir64); \
+@JM_WIN64_TRUE@@WITH_PYTHON64_TRUE@	export PATH="$(ORIG_PATH)"; \
+@JM_WIN64_TRUE@@WITH_PYTHON64_TRUE@	export PYTHON_HOME=$(ORIG_PYTHON_HOME); \
+@JM_WIN64_TRUE@@WITH_PYTHON64_TRUE@	rm -rf build
 	mkdir -p $(pyfmi_build_dir); \
 	cd $(abs_top_srcdir)/external; \
 	find PyFMI -type f |grep -v /.svn | grep -v .pyc | grep -v ~ |tar c -T - -f - | tar x -C $(pyfmi_build_dir); \
@@ -962,16 +999,34 @@ build-python-packages:
 	python setup.py install --fmil-home=$(abs_builddir)/FMIL_install/ --prefix=$(pyfmi_install_dir) ;; \
 	esac
 	rm -rf build
-
+@JM_WIN64_TRUE@@WITH_PYTHON64_TRUE@	mkdir -p $(pyfmi_build_dir64); \
+@JM_WIN64_TRUE@@WITH_PYTHON64_TRUE@	cd $(abs_top_srcdir)/external; \
+@JM_WIN64_TRUE@@WITH_PYTHON64_TRUE@	find PyFMI -type f |grep -v /.svn | grep -v .pyc | grep -v ~ |tar c -T - -f - | tar x -C $(pyfmi_build_dir64); \
+@JM_WIN64_TRUE@@WITH_PYTHON64_TRUE@	cd $(pyfmi_build_dir64)/PyFMI; \
+@JM_WIN64_TRUE@@WITH_PYTHON64_TRUE@	export PATH=$(PYTHON64_HOME):$(PYTHON64_HOME)/Scripts:"${PATH}"; \
+@JM_WIN64_TRUE@@WITH_PYTHON64_TRUE@	export PYTHON_HOME=$(PYTHON64_HOME); \
+@JM_WIN64_TRUE@@WITH_PYTHON64_TRUE@	python setup.py install --fmil-home=$(abs_builddir)/FMIL_install64/ $(NUMPY_NO_MSVCR_ARG) --prefix=$(pyfmi_install_dir64); \
+@JM_WIN64_TRUE@@WITH_PYTHON64_TRUE@	export PATH="$(ORIG_PATH)"; \
+@JM_WIN64_TRUE@@WITH_PYTHON64_TRUE@	export PYTHON_HOME=$(ORIG_PYTHON_HOME); \
+@JM_WIN64_TRUE@@WITH_PYTHON64_TRUE@	rm -rf build
 	cd $(abs_top_srcdir)/Python/src; \
 	python setup_pyjmi.py install --prefix=$(pyjmi_install_dir); \
 	rm -rf build
-
+@JM_WIN64_TRUE@@WITH_PYTHON64_TRUE@	cd $(abs_top_srcdir)/Python/src; \
+@JM_WIN64_TRUE@@WITH_PYTHON64_TRUE@	export PATH=$(PYTHON64_HOME):$(PYTHON64_HOME)/Scripts:"${PATH}"; \
+@JM_WIN64_TRUE@@WITH_PYTHON64_TRUE@	export PYTHON_HOME=$(PYTHON64_HOME); \
+@JM_WIN64_TRUE@@WITH_PYTHON64_TRUE@	python setup_pyjmi.py install --prefix=$(pyjmi_install_dir64); \
+@JM_WIN64_TRUE@@WITH_PYTHON64_TRUE@	export PATH="$(ORIG_PATH)"; \
+@JM_WIN64_TRUE@@WITH_PYTHON64_TRUE@	export PYTHON_HOME=$(ORIG_PYTHON_HOME); \
+@JM_WIN64_TRUE@@WITH_PYTHON64_TRUE@	rm -rf build
 install-python-packages: build-python-packages
 	mkdir -p $(DESTDIR)$(prefix)/Python
 	cp $(abs_top_srcdir)/Python/src/startup.py $(DESTDIR)$(prefix)/
 	cp Python/src/required_defaults.py $(DESTDIR)$(prefix)/Python/
 	[ $(abs_top_srcdir) == $(DESTDIR)$(prefix) ] && echo "Installing in dist directory, don't copy LICENSE file" || cp $(abs_top_srcdir)/Python/LICENSE $(DESTDIR)$(prefix)/Python
+@JM_WIN64_TRUE@	mkdir -p $(DESTDIR)$(prefix)/Python_64
+@JM_WIN64_TRUE@	cp Python/src/required_defaults.py $(DESTDIR)$(prefix)/Python_64/
+@JM_WIN64_TRUE@	[ $(abs_top_srcdir) == $(DESTDIR)$(prefix) ] && echo "Installing in dist directory, don't copy LICENSE file" || cp $(abs_top_srcdir)/Python/LICENSE $(DESTDIR)$(prefix)/Python_64
 @WITH_SUNDIALS_TRUE@	for pkgdir in lib/python2.5 lib/python2.6 lib/python2.7 lib64/python2.5 lib64/python2.6 lib64/python2.7 Lib; do \
 @WITH_SUNDIALS_TRUE@	if [ -e $(assimulo_install_dir)/$${pkgdir}/site-packages/ ]; \
 @WITH_SUNDIALS_TRUE@	then \
@@ -1003,6 +1058,41 @@ install-python-packages: build-python-packages
 	cd $(abs_top_srcdir)/Python/src/tests_jmodelica/; \
 	mkdir -p $(DESTDIR)$(prefix)/Python/tests_jmodelica; \
 	find . -type f |grep -v /.svn | grep -v .pyc | grep -v ~ |tar c -T - -f - | tar x -C $(DESTDIR)$(prefix)/Python/tests_jmodelica
+@JM_WIN64_TRUE@@WITH_SUNDIALS_TRUE@	for pkgdir in lib/python2.5 lib/python2.6 lib/python2.7 lib64/python2.5 lib64/python2.6 lib64/python2.7 Lib; do \
+@JM_WIN64_TRUE@@WITH_SUNDIALS_TRUE@	if [ -e $(assimulo_install_dir64)/$${pkgdir}/site-packages/ ]; \
+@JM_WIN64_TRUE@@WITH_SUNDIALS_TRUE@	then \
+@JM_WIN64_TRUE@@WITH_SUNDIALS_TRUE@	cd $(assimulo_install_dir64)/$${pkgdir}/site-packages/; \
+@JM_WIN64_TRUE@@WITH_SUNDIALS_TRUE@	find assimulo -type f |grep -v /.svn | grep -v .pyc | grep -v ~ |tar c -T - -f - | tar x -C $(DESTDIR)$(prefix)/Python_64; \
+@JM_WIN64_TRUE@@WITH_SUNDIALS_TRUE@	fi; \
+@JM_WIN64_TRUE@@WITH_SUNDIALS_TRUE@	done
+@JM_WIN64_TRUE@	for pkgdir in lib/python2.5 lib/python2.6 lib/python2.7 lib64/python2.5 lib64/python2.6 lib64/python2.7 Lib; do \
+@JM_WIN64_TRUE@	if [ -e $(pymodelica_install_dir64)/$${pkgdir}/site-packages/ ]; \
+@JM_WIN64_TRUE@	then \
+@JM_WIN64_TRUE@	cd $(pymodelica_install_dir64)/$${pkgdir}/site-packages/; \
+@JM_WIN64_TRUE@	find pymodelica -type f |grep -v /.svn | grep -v .pyc | grep -v ~ |tar c -T - -f - | tar x -C $(DESTDIR)$(prefix)/Python_64; \
+@JM_WIN64_TRUE@	fi; \
+@JM_WIN64_TRUE@	done
+@JM_WIN64_TRUE@	for pkgdir in lib/python2.5 lib/python2.6 lib/python2.7 lib64/python2.5 lib64/python2.6 lib64/python2.7 Lib; do \
+@JM_WIN64_TRUE@	if [ -e $(pyjmi_install_dir64)/$${pkgdir}/site-packages/ ]; \
+@JM_WIN64_TRUE@	then \
+@JM_WIN64_TRUE@	cd $(pyjmi_install_dir64)/$${pkgdir}/site-packages/; \
+@JM_WIN64_TRUE@	find pyjmi -type f |grep -v /.svn | grep -v .pyc | grep -v ~ |tar c -T - -f - | tar x -C $(DESTDIR)$(prefix)/Python_64; \
+@JM_WIN64_TRUE@	fi; \
+@JM_WIN64_TRUE@	done
+@JM_WIN64_TRUE@	for pkgdir in lib/python2.5 lib/python2.6 lib/python2.7 lib64/python2.5 lib64/python2.6 lib64/python2.7 Lib; do \
+@JM_WIN64_TRUE@	if [ -e $(pyfmi_install_dir64)/$${pkgdir}/site-packages/ ]; \
+@JM_WIN64_TRUE@	then \
+@JM_WIN64_TRUE@	cd $(pyfmi_install_dir64)/$${pkgdir}/site-packages/; \
+@JM_WIN64_TRUE@	find pyfmi -type f |grep -v /.svn | grep -v .pyc | grep -v ~ |tar c -T - -f - | tar x -C $(DESTDIR)$(prefix)/Python_64; \
+@JM_WIN64_TRUE@	fi; \
+@JM_WIN64_TRUE@	done
+@JM_WIN64_TRUE@	cd $(abs_top_srcdir)/Python/src/tests_jmodelica/; \
+@JM_WIN64_TRUE@	mkdir -p $(DESTDIR)$(prefix)/Python_64/tests_jmodelica; \
+@JM_WIN64_TRUE@	find . -type f |grep -v /.svn | grep -v .pyc | grep -v ~ |tar c -T - -f - | tar x -C $(DESTDIR)$(prefix)/Python_64/tests_jmodelica
+@JM_WIN64_TRUE@	rm -rf $(DESTDIR)$(prefix)/Python_64/tests_jmodelica/files/Modelica/Resources/src
+@JM_WIN64_TRUE@	rm -f $(DESTDIR)$(prefix)/Python_64/tests_jmodelica/files/Modelica/Resources/CMakeLists.txt
+@JM_WIN64_TRUE@	rm -f $(DESTDIR)$(prefix)/Python_64/tests_jmodelica/files/Modelica/Resources/Makefile.am
+@JM_WIN64_TRUE@	rm -f $(DESTDIR)$(prefix)/Python_64/tests_jmodelica/files/Modelica/Resources/Makefile.in
 	rm -rf $(DESTDIR)$(prefix)/Python/tests_jmodelica/files/Modelica/Resources/src
 	rm -f $(DESTDIR)$(prefix)/Python/tests_jmodelica/files/Modelica/Resources/CMakeLists.txt
 	rm -f $(DESTDIR)$(prefix)/Python/tests_jmodelica/files/Modelica/Resources/Makefile.am
