--- a/trunk/Python/Makefile.in
+++ b/trunk/Python/Makefile.in
@@ -64,6 +64,8 @@ CASADI_HOME = @CASADI_HOME@
 CC = @CC@
 CCDEPMODE = @CCDEPMODE@
 CFLAGS = @CFLAGS@
+CMAKE_PYTHON64_INCLUDE = @CMAKE_PYTHON64_INCLUDE@
+CMAKE_PYTHON64_LIB = @CMAKE_PYTHON64_LIB@
 CMAKE_PYTHON_INCLUDE = @CMAKE_PYTHON_INCLUDE@
 CMAKE_PYTHON_LIB = @CMAKE_PYTHON_LIB@
 CP = @CP@
@@ -116,6 +118,8 @@ NMEDIT = @NMEDIT@
 OBJDUMP = @OBJDUMP@
 OBJEXT = @OBJEXT@
 OPENMP_CFLAGS = @OPENMP_CFLAGS@
+ORIG_PATH = @ORIG_PATH@
+ORIG_PYTHON_HOME = @ORIG_PYTHON_HOME@
 OTOOL = @OTOOL@
 OTOOL64 = @OTOOL64@
 PACKAGE = @PACKAGE@
@@ -126,6 +130,7 @@ PACKAGE_TARNAME = @PACKAGE_TARNAME@
 PACKAGE_URL = @PACKAGE_URL@
 PACKAGE_VERSION = @PACKAGE_VERSION@
 PATH_SEPARATOR = @PATH_SEPARATOR@
+PYTHON64_HOME = @PYTHON64_HOME@
 PYTHON_HOME = @PYTHON_HOME@
 RANLIB = @RANLIB@
 REQUIRE_BEAVER_PATH = @REQUIRE_BEAVER_PATH@
