--- a/trunk/RuntimeLibrary/Makefiles/Makefile.windows
+++ b/trunk/RuntimeLibrary/Makefiles/Makefile.windows
@@ -93,7 +93,7 @@ EXT_LIB_DIRS =
 # is found in the mingw configuration and we need to specify that we
 # want the static version.
 EXT_LIBS = 
-EXTERNAL_LIBS = $(EXT_LIBS:%=-l%) -llapack -lblas -l:libgfortran.a
+EXTERNAL_LIBS = $(EXT_LIBS:%=-l%) -llapack -lblas -l:libgfortran.a -l:libquadmath.a
 
 # Additional include directories
 EXT_INC_DIRS =
@@ -151,7 +151,7 @@ SUNDIALS_LIB_DIR64 = $(SUNDIALS_HOME)/lib64
 
 # Flags needed for specific libs
 LIB_MINPACK  = "-L$(MINPACK_LIB_DIR)" -l:libcminpack.a
-LIB_SUNDIALS = "-L$(SUNDIALS_LIB_DIR)" -l:libsundials_kinsol.a -l:libsundials_nvecserial.a -l:libsundials_cvode.a -l:libquadmath.a
+LIB_SUNDIALS = "-L$(SUNDIALS_LIB_DIR)" -l:libsundials_kinsol.a -l:libsundials_nvecserial.a -l:libsundials_cvode.a
 STATIC_PTHREADS_CONT = $(shell dir "$(STATIC_PTHREADS_HOME)")
 ifneq ($(findstring ..,$(STATIC_PTHREADS_CONT)),)
 LIB_PTHREADS = "-L$(STATIC_PTHREADS_HOME)/lib" -lpthreadGC2-2-9-1
