--- a/trunk/Python/Makefile.in
+++ b/trunk/Python/Makefile.in
@@ -103,6 +103,8 @@ IPOPT64_LIB = @IPOPT64_LIB@
 IPOPT_HOME = @IPOPT_HOME@
 IPOPT_INC = @IPOPT_INC@
 IPOPT_LIB = @IPOPT_LIB@
+JVMDLL64_HOME = @JVMDLL64_HOME@
+JVMDLL_HOME = @JVMDLL_HOME@
 LD = @LD@
 LDFLAGS = @LDFLAGS@
 LIBOBJS = @LIBOBJS@
