--- a/trunk/jm_tests.in
+++ b/trunk/jm_tests.in
@@ -143,7 +143,7 @@ fi
 
 # Extend with all tests for default version of Python/bitness
 if [[ "${PYTHON64_HOME}" != "" ]]; then
-TAGS64="${TAGS64} stddist_full"
+TAGS64="${TAGS64} -a stddist_full"
 if [[ "${IPOPT64_HOME}" != "" ]]; then
   if [[ "${SYS}" == Win ]]; then
     TAGS64="${TAGS64} -a windows_full"
@@ -153,7 +153,7 @@ if [[ "${IPOPT64_HOME}" != "" ]]; then
   fi
 fi  
 else
-TAGS="${TAGS} stddist_full"
+TAGS="${TAGS} -a stddist_full"
 if [[ "${IPOPT_HOME}" != "" ]]; then
   if [[ "${SYS}" == Win ]]; then
     TAGS="${TAGS} -a windows_full"
@@ -573,7 +573,7 @@ function read_args() {
             echo "       listed tags. If given without tags, all tests are run. If -t is "
             echo "       given several times, only the last one will be used (not always a valid option)"
             echo "  -u   When running python64 tests, only run tests marked with one of the "
-            echo "       listed tags. If given without tags, all tests are run. If -t64 is "
+            echo "       listed tags. If given without tags, all tests are run. If -u is "
             echo "       given several times, only the last one will be used"
             echo "  -g   When running python tests, add the listed tags to the tags to use"
             echo "  -r   When running python 64tests, add the listed tags to the tags to use"
