--- a/jm_tests.in
+++ b/jm_tests.in
@@ -113,7 +113,9 @@ test_set_p="python"
 test_set_z="python64"
 
 # Standard set of tags
-TAGS="-a stddist_base -a fmi -a noncompliantfmi"
+# -a noncompliantfmi takes extremely long time to run and will thus not 
+# be part of default test tags 
+TAGS="-a stddist_base"
 if [[ "${IPOPT_HOME}" != "" ]]; then
   TAGS="${TAGS} -a ipopt"
   if [[ "${SYS}" == Win ]]; then
@@ -127,7 +129,9 @@ if [[ "${IPOPT_HOME}" != "" ]]; then
 fi
 
 # Standard set of tags
-TAGS64="-a stddist_base -a fmi -a noncompliantfmi"
+# -a noncompliantfmi takes extremely long time to run and will thus not 
+# be part of default test tags 
+TAGS64="-a stddist_base"
 if [[ "${IPOPT64_HOME}" != "" ]]; then
   TAGS64="${TAGS64} -a ipopt"
   if [[ "${SYS}" == Win ]]; then
