--- a/branches/dev/5174/RuntimeLibrary/src/jmi/CMakeLists.txt
+++ b/branches/dev/5174/RuntimeLibrary/src/jmi/CMakeLists.txt
@@ -51,6 +51,7 @@ set(JMIBlockSourcesPartial
     jmi_brent_solver.h
     jmi_minpack_solver.h
     jmi_linear_solver.h
+    jmi_realtime_solver.h
     jmi_simple_newton.h
 
     jmi_block_solver.c
@@ -59,6 +60,7 @@ set(JMIBlockSourcesPartial
     jmi_brent_solver.c
     jmi_minpack_solver.c
     jmi_linear_solver.c
+    jmi_realtime_solver.c
     jmi_simple_newton.c
 )
 
